# eventide

./: .gitignore  README.md  git-log.txt  package-lock.json  package.json
cpp/: '  CMakeLists.txt  \  build.sh  build_projects.sh  run.sh  x
cpp/include/: Agent.hpp  Chunk.hpp  Engine.hpp  Environment.hpp  Globals.hpp  Ray.h  ResourceManager.hpp  SimplexNoise.h  Voxels.hpp  agent.hpp  engine.hpp  environment.hpp  glad.h  kdtree.hpp  resource_manager.hpp
cpp/include/Chunk/: Chunk.hpp
cpp/include/Engine/: Engine.hpp
cpp/include/Environment/: Biomes.hpp  Environment.hpp
cpp/include/Renderer/: Agent.hpp  Camera.hpp  Renderer.hpp
cpp/include/Utils/: Enums.hpp  Globals.hpp  VecOperations.hpp
cpp/include/Voxel/: Voxel.hpp
cpp/src/: Agent.cpp  Chunk.cpp  Engine.cpp  Environment.cpp  Globals.cpp  Ray.cpp  ResourceManager.cpp  SimplexNoise.cpp  Voxels.cpp  agent.cpp  engine.cpp  environment.cpp  kdetree.cpp  main.cpp  resource_manager.cpp
cpp/src/Chunk/: Chunk.cpp
cpp/src/Engine/: Engine.cpp
cpp/src/Environment/: Environment.cpp
cpp/src/Renderer/: Agent.cpp  Renderer.cpp
cpp/src/Utils/: Globals.cpp  SimplexNoise.cpp
cpp/src/Voxel/: Voxel.cpp
src-engine/: CMakeLists.txt
src-engine/include/: engine.hpp  environment.hpp  player.hpp  resource_manager.hpp
src-engine/src/: engine.cpp  environment.cpp  glad.c  main.cpp  player.cpp  resource_manager.cpp  resource_manger.hpp
src-js/: index.html  main.js  styles.css
src-rust/: Cargo.toml  \  tauri.conf.json
src-rust/src/: lib.rs  main.rs
src-rust/src/filereader/: read_file.rs
